Draw dealer's 2nd card later, prevent cheat

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
 
         <p id="card-dealer-el">Dealer's Cards:</p>
         <div class="card-container" id="dealer">
-            <img class="card-img-el" id="card-1">
-            <img class="card-img-el" id="card-2">
-            <img class="card-img-el" id="card-3">
+            <img class="card-img-el">
+            <img class="card-img-el", id="card-2-dealer">
+            <img class="card-img-el">
         </div>
         <p id="sum-dealer-el">Sum: </p>
 
         <p id="card-player-el">Player's Cards:</p>
         <div class="card-container", id="player">
-            <img class="card-img-el" id="card-1">
-            <img class="card-img-el" id="card-2">
-            <img class="card-img-el" id="card-3">
-            <img class="card-img-el" id="card-4">
-            <img class="card-img-el" id="card-5">
-            <img class="card-img-el" id="card-6">
-            <img class="card-img-el" id="card-7">
-            <img class="card-img-el" id="card-8">
-            <img class="card-img-el" id="card-9">
-            <img class="card-img-el" id="card-10">
-            <img class="card-img-el" id="card-11">
+            <img class="card-img-el">
+            <img class="card-img-el">
+            <img class="card-img-el">
+            <img class="card-img-el">
+            <img class="card-img-el">
+            <img class="card-img-el">
+            <img class="card-img-el">
+            <img class="card-img-el">
+            <img class="card-img-el">
+            <img class="card-img-el">
+            <img class="card-img-el">
         </div>
         <p id="sum-player-el">Sum:</p>
         
