Add buttons to change pts

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         <span>Bet</span>
         <input type="number" value = "0", id="bet-input-el">
         <span id="chips-el"></span>
+        <button class="small-btn" id="+1">+1</button>
+        <button class="small-btn" id="+5">+5</button>
+        <button class="small-btn" id="+10">+10</button>
+
+        <button class="small-btn" id="-1">-1</button>
+        <button class="small-btn" id="-5">-5</button>
+        <button class="small-btn" id="-10">-10</button>
+
         <button class="btn" id="start-btn">START GAME</button>
         <button class="btn" id="stop-btn">STOP & REVEAL</button>
 
