--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <div id="player-info">
                 <div id="bet-info">
-                    <span>Bet</span>
+                    <span>Bet: </span>
                     <input type="number" value = "0", id="bet-input-el">
                     <span id="chips-el"></span> 
                 </div>
